<resources>
    <string name="app_name">Fooddy</string>
    <string name="title_activity_maps">Map</string>
    <string name="trangchu">Trang Chu</string>
    <string name="Nghe">Nghe</string>
    <string name="doc">Doc</string>
    <string name="lichsu">Lich Su</string>
    <string name="test">Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_info_title">Hà Nội</string>
    <string name="default_info_snippet">Thanh Hóa</string>
    <string name="pick_place">PickPlace</string>
    <string name="option_get_place">Chọn Place Current</string>
</resources>
